# mal

./: Makefile.impls
impls/rust2718/: Cargo.toml  Makefile
impls/rust2718/src/: env.rs  error.rs  eval.rs  hard.rs  lib.rs  printer.rs  read.rs  reader.rs  types.rs
impls/rust2718/src/hard/: math.rs
impls/rust2718/src/types/: builtin.rs  lambda.rs  list.rs  map.rs
impls/rust2718/src/types/builtin/: math.rs
